hard-gists/dc3257b6a44da3d8fd05/run.log
=== Docker Run Log for dc3257b6a44da3d8fd05 ===
Started at: Mi 29. Okt 20:32:46 CET 2025

[2025-10-29 20:32:46] START: Running container for dc3257b6a44da3d8fd05
[2025-10-29 20:32:47] SUCCESS: Container d8eee57aa49b7fdd87d2647dd3a93e8ee600c9aed4834b4bb71c56cd96b76ef2 started for dc3257b6a44da3d8fd05
=== Container logs for dc3257b6a44da3d8fd05 ===
  File "/snippet.py", line 84
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for dc3257b6a44da3d8fd05 ===
[2025-10-29 20:32:49] INFO: Container d8eee57aa49b7fdd87d2647dd3a93e8ee600c9aed4834b4bb71c56cd96b76ef2 has stopped
